# portfolio-tracker

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  workspace.yaml
dbt/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/models/entity/: _models.yml  dim_portfolio_position_gain_loss.sql  fct_portfolio_gain_loss_overtime.sql  fct_portfolio_positions.sql  fct_stock_open_close_prices.sql
dbt/models/staging/: _models.yml  _sources.yml  stg__portfolio_tracker__stock_prices_open_close.sql  stg_portfolio_tracker__portfolio_positions.sql  stg_portfolio_tracker__stock_open_close_prices.sql
dbt/seeds/: seed_delisted_tickers.csv  seed_portfolio_positions.csv
orchestration/dagster/: assets_dbt.py  assets_prices.py  constants.py  definitions.py  jobs.py  resources.py  s3_utils.py  triggers.py
orchestration/dagster/sql/: create_metadata_table.sql.j2  create_secret.sql.j2  get_all_ticker_positions.sql.j2  get_ticker_max_dates.sql.j2  list_loaded_files.sql.j2
orchestration/portfolio_tracker/: market_data.py
pages/utils/: database.py  login.py
pages/visualisations/: positions.py
src/dagster/: assets_dbt.py  assets_prices.py  constants.py  definitions.py  jobs.py  resources.py  triggers.py
src/dagster/sql/: __init__.py  create_metadata_table.sql.j2  create_schema.sql.j2  create_table.sql.j2  delete_loaded_files.sql.j2  insert_files.sql.j2  list_loaded_files.sql.j2  list_source_files.sql.j2  macros.sql.j2  record_loaded_files.sql.j2
src/portfolio-tracker/: constants.py  definitions.py
src/portfolio_tracker/: market_data.py
