[project]
name = "portfolio-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.15"
dependencies = [
    "dagster>=1.13.9",
    "dagster-aws>=0.29.9",
    "dagster-dbt>=0.29.9",
    "dagster-duckdb>=0.29.9",
    "dagster-webserver>=1.13.9",
    "dbt-core>=1.11.11",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.3",
    "nodeenv>=1.10.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "streamlit>=1.58.0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
